tweet whitespace fix

--- a/twitter_project/static/styles/tweets/new_tweet.css
+++ b/twitter_project/static/styles/tweets/new_tweet.css
@@ -11,6 +11,7 @@
     overflow-x: hidden;
     outline: 0px solid transparent;
     margin-left: 10px;
+    white-space: pre-line
 }
 
 .new-tweet-media {
